Changes in 1.8 (??.??.2011)

 - Support for better collada texture wrapping support on loading.

 - XML-reader now ignores all whitespace-only EXN_TEXT elements as old way didn't work in cross-platform way (and arguably also not well on Windows). 

 - CXMLReader initializes IsEmptyElement now.

 - line2d::intersectWith and and line2d::getClosestPoint work now also with integers.

 - line2d::getMiddle and line3d::getMiddle work now also with integers. But can be slower for compilers which are not optimizing division by 2 to multiplication by 0.5 for floats.

 - Add IGUIEnvironment::getHovered to get the element most recently known to be under the mouse cursor

 - Add support for bsp brush entities. Written by Hendu.

 - Add IGUIComboBox::setMaxSelectionRows and IGUIComboBox::getMaxSelectionRows

 - Scenemanager switches from type ESNT_UNKNOWN to type ESNT_SCENE_MANAGER.

 - Add getActiveFont to all elements which have setOverrideFont for cleaner code

 - Add getOverrideFont to all elements which have setOverrideFont to have a consistent interface

 - IGUIEditBox: added missing serialization for Border

 - IGUIEditBox: remove bug that added spaces to the end of each line 

 - IGUIEditBox: fix crash that happened when wordwrapping was enabled, spaces were entered beyond the border and then cursor-key was pressed.

 - IGUIEditBox::setDrawBackground added.

 - CGUISkin::draw3DSunkenPane no longer ignores fillBackGround in non-flat mode. Also borderlines are no longer drawn overlapping to avoid ugly corners.

 - CDummyTransformationSceneNode::clone() added.

 - IParticleSystemSceneNode::doParticleSystem now public to allow rendering outside scenegraph. 

 - Renamed IOSOperator::getOperationSystemVersion to getOperatingSystemVersion. Changed return type from wchar_t to core::stringc, as that's the internal representation the name is built on.

 - Added IGUITabControl::insertTab, IGUITabControl::removeTab, IGUITabControl::clear and IGUITabControl::getTabAt
